@@ -23,6 +23,7 @@ import java.util.Queue;
 import java.util.ResourceBundle;
 import java.util.Set;
 import java.util.Stack;
+import java.util.stream.Collectors;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
@@ -121,7 +122,7 @@ public class VistaPlanificacionRutasController implements Initializable {
             List<Crater> crateres = CraterData.cargarCrateres();
 
             List<String> nombreCrater = crateres.stream()
-                    .map(it -> it.getNombre().toLowerCase()).toList();
+                    .map(it -> it.getNombre().toLowerCase()).collect(Collectors.toList());
             for (String nombre : crateresNombresIngresados) {
                 int idx = nombreCrater.indexOf(nombre.trim());
                 if (idx >= 0) {
@@ -154,7 +155,7 @@ public class VistaPlanificacionRutasController implements Initializable {
 
                 while (!tmp.isEmpty()) {
                     Crater t = tmp.poll();
-                    double ndist = u0.distancia(t.getUbicacion());
+                    double ndist = u0.distancia(t.getUbicacion()).get(0);
                     if (ndist < dist_min) {
                         dist_min = ndist;
                         minDistCrater = t;
